# website

./: .gitignore  CNAME  Makefile  README.md  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml  tags.html  tasks.py
.github/: FUNDING.yml
.github/workflows/: pelican.yml
2024/07/hello-world/: index.html
author/: jony-kalavera.html
category/: announcements.html
content/: first-post.md
output/: archives.html  authors.html  blog-index.html  blog.html  categories.html  hello-world.html  index.html  sitemap.xml  tags.html
output/2024/07/hello-world/: index.html
output/author/: jony-kalavera.html
output/category/: anouncement.html
output/theme/css/: style.css
tests/: __init__.py  test_tasks.py
theme/css/: style.css
theme/static/: site.webmanifest
theme/static/css/: style.css
theme/templates/: article.html  base.html  disqus_script.html
