[tool.poetry]
name = "studiokalavera"
version = "0.1.0"
description = "Game Development Studio Website"
authors = ["Jony Kalavera <mr.jony@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.9.1"}
pelican-sitemap = "^1.1.0"
pelican-neighbors = "^1.2.0"
pelican-related-posts = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
