##############################################################################
# MYPY SETTINGS                                                              #
##############################################################################
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
mypy_path = "."

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "*.tests.*"
]
ignore_errors = true
##############################################################################
# RUFF SETTINGS                                                             #
##############################################################################

[tool.ruff]

# Same as Black.
line-length = 119

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
exclude = ["__pycache__", ".pytest_cache", ".mypy_cache", ".venv",]

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "B", "T20", "TCH", "ASYNC", "U", "UP", "LOG", "G", "ERA", "SIM", "D" ]

# On top of the Google convention, disable `D417`, which requires
# documentation for every function parameter.
ignore = ["D417", "PLR0913", "PLR2004", ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

##############################################################################
# POETRY SETTINGS                                                            #
##############################################################################
[tool.poetry]
name = "studiokalavera"
version = "0.1.0"
description = "Game Development Studio Website"
authors = ["Jony Kalavera <mr.jony@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pelican = {extras = ["markdown"], version = "^4.9.1"}
pelican-sitemap = "^1.1.0"
pelican-neighbors = "^1.2.0"
pelican-related-posts = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
mypy = "^1.11.0"
types-invoke = "^2.0.0.10"
pytest = "^8.3.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
